--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,14 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="action_sort">Sort</string>
+
+    <array name="sort_options">
+        <item>Newest</item>
+        <item>Oldest</item>
+        <item>Most Read</item>
+        <item>Most pages</item>
+        <item>Least Pages</item>
+        <item>Marked</item>
+    </array>
+
 </resources>
