Add of settings activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,6 @@
         <item>Least Pages</item>
         <item>Marked</item>
     </array>
+    <string name="title_activity_settings">SettingsActivity</string>
 
 </resources>
